add referencing/modification examples

--- a/pyladies/pyladies_dictionaries.ipynb
+++ b/pyladies/pyladies_dictionaries.ipynb
@@ -9,13 +9,16 @@
     "\n",
     "##Reference and Background Reading##\n",
     "\n",
+    "When you're reading docs/tutorials, make sure to check the version of Python used.\n",
     "* [Official documentation](https://docs.python.org/2/tutorial/datastructures.html#dictionaries) - official reference.\n",
     "* [Learn to Think Like a Computer Scientist (Dictionaries)](http://www.greenteapress.com/thinkpython/thinkCSpy/html/chap10.html) - recommended introductory reading.\n",
+    "* Find the other exercises [here](https://github.com/margaret/worksheets/blob/master/pyladies/dictionaries.py).\n",
     "\n",
     "##Generally helpful things##\n",
     "* `help` function will display documentation for functions. Calling `help(int)` from the interactive command prompt will jump to a new screen with the documentation. Press `q` to exit.\n",
     "* `dir`  function will display all the methods that can be called on an object.\n",
-    "* Reference sheets - if you are working through a Codecademy course (or any similar linear tutorial), you may find it helpful to keep a reference sheet such as [this one](http://www.cogsci.rpi.edu/~destem/igd/python_cheat_sheet.pdf) handy rather than jumping back and forth through the embedded tutorial documentations. "
+    "* Reference sheets - if you are working through a Codecademy course (or any similar linear tutorial), you may find it helpful to keep a reference sheet such as [this one](http://www.cogsci.rpi.edu/~destem/igd/python_cheat_sheet.pdf) handy rather than jumping back and forth through the embedded tutorial documentations. \n",
+    "* What is this \"`ipynb`\" thing? An [IPython notebook](http://ipython.org/)! Check it out. "
    ]
   },
   {
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -58,8 +61,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-0289d7c8b999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Alice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Paul'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-5-0289d7c8b999>\u001b[0m in \u001b[0;36mlookup_email\u001b[0;34m(address_book, person)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperson\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maddress_book\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}'s email address is {1}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-36-0289d7c8b999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Alice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Paul'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-36-0289d7c8b999>\u001b[0m in \u001b[0;36mlookup_email\u001b[0;34m(address_book, person)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperson\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maddress_book\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}'s email address is {1}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 'Paul'"
      ]
     }
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -110,8 +113,143 @@
    "source": [
     "##Things to watch out for##\n",
     "\n",
-    "###Immutability###\n",
-    "stuff"
+    "###Copying Dictionaries###\n",
+    "Be careful about modifying things!\n",
+    "\n",
+    "Here, both counter variables reference the same dictionary object in the computer's memory. If you want to copy a dictionary, use `copy`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "counter2\n",
+      "{'a': 0, 'c': 42, 'b': 3}\n",
+      "counter2 after counter1 is modified\n",
+      "{'a': 1, 'c': 42, 'b': 3}\n",
+      "True\n",
+      "counter3\n",
+      "{'a': 1, 'c': 42, 'b': 3}\n",
+      "counter3 after counter1 is modified\n",
+      "{'a': 1, 'c': 42, 'b': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter1 = {'a':0, 'b':3, 'c':42}\n",
+    "counter2 = counter1\n",
+    "print \"counter2\"\n",
+    "print counter2\n",
+    "\n",
+    "counter1['a'] += 1\n",
+    "print \"counter2 after counter1 is modified\"\n",
+    "print counter2\n",
+    "\n",
+    "# same object\n",
+    "print id(counter1) == id(counter2)\n",
+    "\n",
+    "counter3 = counter1.copy()\n",
+    "print \"counter3\"\n",
+    "print counter3\n",
+    "\n",
+    "counter1['b'] += 10\n",
+    "\n",
+    "print \"counter3 after counter1 is modified\"\n",
+    "print counter3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Modifying Objects in Functions###\n",
+    "Be aware of whether you are modifying the original dictionary. Sometimes you might want this behavior, but other times you might not. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here we have our first counter\n",
+      "{'a': 1, 'c': 42, 'b': 13}\n",
+      "Incremented counter\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n",
+      "Original counter\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Here we have our first counter\"\n",
+    "print counter1\n",
+    "\n",
+    "def increment_all(counter, incr):\n",
+    "    '''increment every value in the counter dictionary by incr'''\n",
+    "    for key in counter:\n",
+    "        counter[key] += incr\n",
+    "    return counter\n",
+    "\n",
+    "incremented = increment_all(counter1, 2)\n",
+    "print \"Incremented counter\"\n",
+    "print incremented\n",
+    "\n",
+    "print \"Original counter\"\n",
+    "print counter1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a destructive operation. If you don't want to modify the input, you have to copy the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original counter\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n",
+      "Original dict after non-destructive function call\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def increment_all_non_destructive(counter, incr):\n",
+    "    '''increment every value in the counter dictionary by incr'''\n",
+    "    new_counter = counter.copy()\n",
+    "    for key in new_counter:\n",
+    "        new_counter[key] += incr\n",
+    "    return new_counter\n",
+    "\n",
+    "print \"Original counter\"\n",
+    "print counter1\n",
+    "\n",
+    "incremented = increment_all_non_destructive(counter1, 2)\n",
+    "print \"Original dict after non-destructive function call\"\n",
+    "print counter1"
    ]
   },
   {
