added collections examples

--- a/pyladies/pyladies_dictionaries.ipynb
+++ b/pyladies/pyladies_dictionaries.ipynb
@@ -8,8 +8,8 @@
     "PyLadies SF beginners meetup 10/22/2015\n",
     "\n",
     "##Reference and Background Reading##\n",
-    "\n",
-    "When you're reading docs/tutorials, make sure to check the version of Python used.\n",
+    " \n",
+    "When you're reading docs/tutorials, make sure to check the version of Python used. This presentation is in Python 2.\n",
     "* [Official documentation](https://docs.python.org/2/tutorial/datastructures.html#dictionaries) - official reference.\n",
     "* [Learn to Think Like a Computer Scientist (Dictionaries)](http://www.greenteapress.com/thinkpython/thinkCSpy/html/chap10.html) - recommended introductory reading.\n",
     "* Find the other exercises [here](https://github.com/margaret/worksheets/blob/master/pyladies/dictionaries.py).\n",
@@ -26,12 +26,12 @@
    "metadata": {},
    "source": [
     "##Error Handling##\n",
-    "If you try to access a nonexistent key, Python will throw a `KeyError`. You can wrap your code in a `try`/`except` clause to handle the exception. "
+    "If you try to access a nonexistent key, Python will throw a `KeyError`. You can wrap your code in a `try`/`except` clause to [handle the exception](https://docs.python.org/2/tutorial/errors.html). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -61,8 +61,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-0289d7c8b999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Alice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Paul'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-36-0289d7c8b999>\u001b[0m in \u001b[0;36mlookup_email\u001b[0;34m(address_book, person)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperson\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maddress_book\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}'s email address is {1}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-65-0289d7c8b999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Alice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Paul'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-65-0289d7c8b999>\u001b[0m in \u001b[0;36mlookup_email\u001b[0;34m(address_book, person)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperson\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maddress_book\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}'s email address is {1}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 'Paul'"
      ]
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -175,24 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here we have our first counter\n",
-      "{'a': 1, 'c': 42, 'b': 13}\n",
-      "Incremented counter\n",
-      "{'a': 3, 'c': 44, 'b': 15}\n",
-      "Original counter\n",
-      "{'a': 3, 'c': 44, 'b': 15}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print \"Here we have our first counter\"\n",
     "print counter1\n",
@@ -220,22 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original counter\n",
-      "{'a': 3, 'c': 44, 'b': 15}\n",
-      "Original dict after non-destructive function call\n",
-      "{'a': 3, 'c': 44, 'b': 15}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def increment_all_non_destructive(counter, incr):\n",
     "    '''increment every value in the counter dictionary by incr'''\n",
@@ -266,22 +242,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "counts = Counter([\"spam\", \"eggs\", \"bacon\"])\n",
+    "print \"Mmm, a fresh counter:\", counts\n",
+    "print \"eggs\", counts['eggs']\n",
+    "counts['eggs'] += 11\n",
+    "print \"more eggs\", counts['eggs']\n",
+    "print \"No cereal\", counts['cereal'] # even though we never inserted it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "emails = defaultdict(list)\n",
+    "print \"Blank defaultdict\"\n",
+    "print emails\n",
+    "emails['Alice']\n",
+    "print \"\\nAfter accessing a new key\"\n",
+    "print emails\n",
+    "emails['Alice'].append('alice@wonderland.com')\n",
+    "emails['Alice'].append('aliceliddell@gmail.com')\n",
+    "print \"\\nCan append to the automatically generated value\"\n",
+    "print emails\n",
+    "emails['Bob'].append('bob@rsa.net') # normally this would cause a KeyError\n",
+    "print emails"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "###JSON###\n",
-    "One of the most common uses of dictionaries are working with JSON-formatted data, which is often what is returned by APIs. The built-in [`json` library](https://docs.python.org/2/library/json.html) provides handy functions for translating between JSON and Python dictionaries. "
+    "One of the most common uses of dictionaries are working with JSON-formatted data, which is often what is returned by APIs. The built-in [JSON library](https://docs.python.org/2/library/json.html) provides handy functions for translating between JSON and Python dictionaries. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -299,6 +308,10 @@
     "\n",
     "# example response from the Twitter API, which represents Tweets like this\n",
     "# https://dev.twitter.com/rest/reference/get/search/tweets\n",
+    "\n",
+    "# API == \"Application Programming Interface\" https://en.wikipedia.org/wiki/Application_programming_interface\n",
+    "# Basically, a defined way for programs to talk to each other. In this example we pretend that we have asked \n",
+    "# Twitter to send us a specific tweet, and this is what we got back. \n",
     "\n",
     "tweet_json = \"\"\"\n",
     "{\n",
@@ -734,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
