filled out 2 vs 3 section

--- a/pyladies/pyladies_dictionaries.ipynb
+++ b/pyladies/pyladies_dictionaries.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -61,8 +61,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-65-0289d7c8b999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Alice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Paul'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-65-0289d7c8b999>\u001b[0m in \u001b[0;36mlookup_email\u001b[0;34m(address_book, person)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperson\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maddress_book\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}'s email address is {1}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-0289d7c8b999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Alice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memails\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Paul'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-0289d7c8b999>\u001b[0m in \u001b[0;36mlookup_email\u001b[0;34m(address_book, person)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlookup_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperson\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maddress_book\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}'s email address is {1}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 'Paul'"
      ]
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -175,11 +175,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here we have our first counter\n",
+      "{'a': 1, 'c': 42, 'b': 13}\n",
+      "Incremented counter\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n",
+      "Original counter\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Here we have our first counter\"\n",
     "print counter1\n",
@@ -207,11 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original counter\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n",
+      "Original dict after non-destructive function call\n",
+      "{'a': 3, 'c': 44, 'b': 15}\n"
+     ]
+    }
+   ],
    "source": [
     "def increment_all_non_destructive(counter, incr):\n",
     "    '''increment every value in the counter dictionary by incr'''\n",
@@ -240,11 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mmm, a fresh counter: Counter({'eggs': 1, 'bacon': 1, 'spam': 1})\n",
+      "eggs 1\n",
+      "more eggs 12\n",
+      "No cereal 0\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -258,11 +293,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blank defaultdict\n",
+      "defaultdict(<type 'list'>, {})\n",
+      "\n",
+      "After accessing a new key\n",
+      "defaultdict(<type 'list'>, {'Alice': []})\n",
+      "\n",
+      "Can append to the automatically generated value\n",
+      "defaultdict(<type 'list'>, {'Alice': ['alice@wonderland.com', 'aliceliddell@gmail.com']})\n",
+      "defaultdict(<type 'list'>, {'Bob': ['bob@rsa.net'], 'Alice': ['alice@wonderland.com', 'aliceliddell@gmail.com']})\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "\n",
@@ -290,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -732,7 +783,7 @@
     "\"\"\"\n",
     "\n",
     "# load this into a dict\n",
-    "tweet_dict = json.loads(tweet_response)\n",
+    "tweet_dict = json.loads(tweet_json)\n",
     "\n",
     "print(tweet_dict)"
    ]
@@ -747,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1046,17 +1097,44 @@
    "metadata": {},
    "source": [
     "##Python 2 vs Python 3##\n",
-    "more stuff like views"
+    "\n",
+    "Dictionaries are mostly the same between Python 2 and 3. The main difference is that in Python 3, the `items`, `values`, and `keys` methods return dictionary views, which are iterators instead of lists. Going through the dictionary contents is basically the same process, except if you want to return all the keys/values/items at once, you'll have to call `list` on the resulting dictionary view. \n",
+    "\n",
+    "\n",
+    "```\n",
+    ">>> d = {(1,2):3}\n",
+    ">>> type(d)\n",
+    "<class 'dict'>\n",
+    ">>> d.items()\n",
+    "dict_items([((1, 2), 3)])\n",
+    ">>> type(d.items())\n",
+    "<class 'dict_items'>\n",
+    ">>> d.keys()\n",
+    "dict_keys([(1, 2)])\n",
+    ">>> type(d.keys())\n",
+    "<class 'dict_keys'>\n",
+    ">>> d.values()\n",
+    "dict_values([3])\n",
+    ">>> type(d.values())\n",
+    "<class 'dict_values'>\n",
+    ">>> for k in d.keys(): print(k)\n",
+    "... \n",
+    "(1, 2)\n",
+    ">>> d[(3,4)]=7\n",
+    ">>> d\n",
+    "{(1, 2): 3, (3, 4): 7}\n",
+    ">>> vals = d.values()\n",
+    ">>> vals[0]\n",
+    "Traceback (most recent call last):\n",
+    "  File \"<stdin>\", line 1, in <module>\n",
+    "TypeError: 'dict_values' object does not support indexing\n",
+    ">>> list(d.values())\n",
+    "[3, 7]\n",
+    ">>> \n",
+    "```\n",
+    "\n",
+    "See http://python3porting.com/differences.html for more 2 to 3 differences."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
