--- a/CS_9H_Review_Questions.tex
+++ b/CS_9H_Review_Questions.tex
@@ -186,7 +186,7 @@ class Picture:
 \end{enumerate}
 
 \section{So you think you know Python?}
-\textnormal{These are just for fun, and are not topics covered on the final. The first is from programmingwats.tumblr.com and the second is via Mehrdad Niknami.}
+\textnormal{These are just for fun, and are not topics covered on the final. The first is from programmingwats.tumblr.com and the second is via Mehrdad.}
 
 \begin{verbatim}
 >>> def my_append(item, lst = []):
