--- a/CS_9H_Review_Solutions.tex
+++ b/CS_9H_Review_Solutions.tex
@@ -262,7 +262,7 @@ Both refer to the same set of pixels, so their contents will change in parallel.
 \end{enumerate}
 
 \section{So you think you know Python?}
-\textnormal{These are just for fun, and are not topics covered on the final. The first is from programmingwats.tumblr.com and the second is via Mehrdad Niknami.}
+\textnormal{These are just for fun, and are not topics covered on the final. The first is from programmingwats.tumblr.com and the second is via Mehrdad.}
 
 \begin{verbatim}
 >>> def my_append(item, lst = []):
